# ComfyUI-KikoTools

./: .flake8  .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code-quality.yml  publish.yml  release.yml  tests.yml
examples/: test_prompts.txt
examples/documentation/: batch_prompts.md  display_any.md  display_text.md  flux_sampler_params.md  gemini_prompt.md  image_to_multiple_of.md  kiko_film_grain.md  kiko_save_image.md  local_image_loader.md  lora_folder_batch.md  plot_parameters.md  sampler_select_helper.md  scheduler_select_helper.md  text_encode_sampler_params.md
examples/workflows/: display_any_example.json  display_text_example.json  empty_latent_batch_example.json  gemini_prompt_example.json  image_to_multiple_of_example.json  kiko_film_grain_example.json  kiko_save_image_example.json  resolution_calculator_example.json  xyz_helpers_sampler_comparison.json
kikotools/: __init__.py
kikotools/tools/gemini_prompt/: .gemini_models_cache.json
kikotools/tools/kiko_workflow_timer/: __init__.py  node.py
kikotools/tools/local_image_loader/: config.json  logic.py  node.py  selections.json
kikotools/tools/width_height_selector/: presets.py
kikotools/tools/width_height_to_vec2/: __init__.py  node.py
tests/unit/tools/: test_kiko_workflow_timer.py  test_sampler_combo.py  test_width_height_to_vec2.py
web/: display_any.js  display_text.js  empty_latent_batch_swap.js  gemini_prompt_ui.js  kikoEmbeddingAutocomplete.js  kiko_custom_colors.js  kiko_follow_execution.js  kiko_local_image_loader.js  kiko_workflow_timer_ui.js  kikotools_extensions.js
