[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kikotools"
description = "Simple tools for ComfyUI"
version = "1.0.26"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    # Code quality
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    # Development utilities
    "pre-commit>=3.0.0",
    # ComfyUI testing (mock dependencies for unit tests)
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=9.0.0"
]

[project.urls]
Repository = "https://github.com/ComfyAssets/ComfyUI-KikoTools"
#  Used by Comfy Registry https://registry.comfy.org

[tool.setuptools.packages.find]
include = ["kikotools*"]
exclude = ["tests*", "web*"]

[tool.comfy]
PublisherId = "kiko9"
DisplayName = "ComfyUI-KikoTools"
Icon = "https://avatars.githubusercontent.com/u/213204677?s=200"
includes = []

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_strict_optional = true
files = ["kikotools"]
exclude = ["tests"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests"
]

[tool.coverage.run]
source = ["kikotools"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:"
]
